[gd_scene load_steps=2 format=3 uid="uid://c8kak1m5n6o7p"]

[ext_resource type="Script" uid="uid://buwnwc5lucvu4" path="res://ui/hub/guild_admin_window.gd" id="1_guild_admin"]

[node name="GuildAdminWindow" type="Window"]
oversampling_override = 1.0
title = "Lista de Clanes Registrados"
initial_position = 1
size = Vector2i(450, 400)
script = ExtResource("1_guild_admin")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="SearchLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Buscar Clan:"

[node name="SearchEdit" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Escribe para filtrar..."

[node name="GuildsList" type="ItemList" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="DetailsBtn" type="Button" parent="VBox/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ver Detalles"

[node name="CloseBtn" type="Button" parent="VBox/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cerrar"

[connection signal="text_changed" from="VBox/SearchEdit" to="." method="_on_search_edit_text_changed"]
[connection signal="item_selected" from="VBox/GuildsList" to="." method="_on_guilds_list_item_selected"]
[connection signal="pressed" from="VBox/ButtonsContainer/DetailsBtn" to="." method="_on_details_btn_pressed"]
[connection signal="pressed" from="VBox/ButtonsContainer/CloseBtn" to="." method="_on_close_btn_pressed"]
